NetBSD Problem Report #53077

From martin@duskware.de  Wed Mar  7 06:50:52 2018
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 18A597A166
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  7 Mar 2018 06:50:52 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: alpha panic: cpu_uarea_alloc: uvm_pglistalloc failed: 12
X-Send-Pr-Version: 3.95

>Number:         53077
>Category:       port-alpha
>Synopsis:       alpha panic: cpu_uarea_alloc: uvm_pglistalloc failed: 12
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    thorpej
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 07 06:55:00 +0000 2018
>Closed-Date:    Mon Sep 21 16:16:33 +0000 2020
>Last-Modified:  Mon Sep 21 16:16:33 +0000 2020
>Originator:     Martin Husemann
>Release:        NetBSD 8.0_BETA
>Organization:

>Environment:
System: NetBSD gemini.duskware.de 8.0_BETA NetBSD 8.0_BETA (GENERIC-$Revision: 1.375.8.1 $) #23: Tue Mar 6 12:48:55 CET 2018 martin@seven-days-to-the-wolves.aprisoft.de:/work/src-8/sys/arch/alpha/compile/GENERIC.MP alpha
Architecture: alpha
Machine: alpha
>Description:

When running atf tests, my alpha paniced:

panic: cpu_uarea_alloc: uvm_pglistalloc failed: 12

Unfortunately no backtrace nor a crash dump, will retry with console log
and ddb enabled.
>How-To-Repeat:
s/a

>Fix:
n/a - never have seen this in -current

>Release-Note:

>Audit-Trail:
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53077 CVS commit: src/sys/arch/alpha/alpha
Date: Mon, 19 Mar 2018 10:31:57 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Mar 19 10:31:56 UTC 2018

 Modified Files:
 	src/sys/arch/alpha/alpha: vm_machdep.c

 Log Message:
 Nowadays we can create new kernel threads late after boot, so if we are
 unable to find physically continous pages for their uarea, just allocate
 them via uvm_km_alloc(), that is: make cpu_uarea_alloc() fail instead
 of panic. cpu_uarea_free() already deals with this.

 Should fix PR port-alpha/53077.

 Discussed with maxv and mrg.


 To generate a diff of this commit:
 cvs rdiff -u -r1.113 -r1.114 src/sys/arch/alpha/alpha/vm_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53077 CVS commit: [netbsd-8] src/sys/arch/alpha/alpha
Date: Tue, 20 Mar 2018 09:15:34 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Tue Mar 20 09:15:34 UTC 2018

 Modified Files:
 	src/sys/arch/alpha/alpha [netbsd-8]: vm_machdep.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #646):
 	sys/arch/alpha/alpha/vm_machdep.c: revision 1.114
 Nowadays we can create new kernel threads late after boot, so if we are
 unable to find physically continous pages for their uarea, just allocate
 them via uvm_km_alloc(), that is: make cpu_uarea_alloc() fail instead
 of panic. cpu_uarea_free() already deals with this.
 Should fix PR port-alpha/53077.
 Discussed with maxv and mrg.


 To generate a diff of this commit:
 cvs rdiff -u -r1.113 -r1.113.20.1 src/sys/arch/alpha/alpha/vm_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: port-alpha-maintainer->thorpej
Responsible-Changed-By: thorpej@NetBSD.org
Responsible-Changed-When: Sat, 29 Aug 2020 22:37:14 +0000
Responsible-Changed-Why:
Take.


State-Changed-From-To: open->feedback
State-Changed-By: thorpej@NetBSD.org
State-Changed-When: Sat, 29 Aug 2020 22:37:14 +0000
State-Changed-Why:
This appears to be resolved.  Can you confirm?


State-Changed-From-To: feedback->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Mon, 21 Sep 2020 16:16:33 +0000
State-Changed-Why:
Can't test currently, assume fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.