Pull up following revision(s) (requested by martin in ticket #646): 	sys/arch/alpha/alpha/vm_machdep.c: revision 1.114 Nowadays we can create new kernel threads late after boot, so if we are unable to find physically continous pages for their uarea, just allocate them via uvm_km_alloc(), that is: make cpu_uarea_alloc() fail instead of panic. cpu_uarea_free() already deals with this. Should fix PR port-alpha/53077. Discussed with maxv and mrg.